syntax = "proto3";

package user;

service UserService {
    rpc Create(User) returns (User);
    rpc GetUser(GetUserRequest) returns (User);
    rpc UpdateUser(User) returns (User);
    rpc CheckField(CheckFieldRequest) returns (CheckFieldResponse);
}

message CheckFieldRequest {
    string field = 1;
    string value = 2;
}

message CheckFieldResponse {
    bool exists = 1;
}

message User {
    int64 id = 1;
    string name = 2;
    string lastname = 3;
    string email = 4;
    string username = 5;
    string password = 6;
}

message Product {
    int64 id = 1;
    string name = 2;
    string model = 3;
    int64 owner_id = 4;
}

message GetUserRequest {
    int64 id = 1;
}